new posts added

--- a/404.html
+++ b/404.html
@@ -67,11 +67,7 @@
     </li>
 
     <li class="site-nav-item">
-        <a href="/recipe2pdf.github.io/requirements/">Requirements</a>
-    </li>
-
-    <li class="site-nav-item">
-        <a href="/recipe2pdf.github.io/page/contact/">Contact</a>
+        <a href="page/requirements/">Requirements</a>
     </li>
 
     <li class="site-nav-item">
